force-app/main/default/objects/Trigger_Handler_Map__mdt.object
<CustomObject>
    <description>Holds Trigger Handler Class Information</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether the handler is active or not</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Handler_Class__c</fullName>
        <description>Handler Class Name</description>
        <label>Handler Class</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <description>Object Name</description>
        <label>Object</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Trigger Handler Map</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Object__c</columns>
        <columns>Handler_Class__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>Trigger Handler Maps</pluralLabel>
</CustomObject>