force-app/main/default/objects/Trigger_Handler_Map__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Object__c</columns>
    <columns>Handler_Class__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>